--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -211,5 +211,6 @@
   "whenWillBeExpire": "When will be expire",
   "coupons": "Coupons",
   "couponsCode": "Coupons code",
-  "generateCode": "Generate code"
+  "generateCode": "Generate code",
+  "useImage": "Use image"
 }
